AC_INIT(src/main.c)
AM_INIT_AUTOMAKE(Scyther, 0.2, ccremers@win.tue.nl)
AM_CONFIG_HEADER(config.h)
AC_CONFIG_SRCDIR(src)

AC_PROG_LIBTOOL

dnl find and test the C compiler
AC_PROG_CC
AC_LANG_C
        
AC_PROG_MAKE_SET

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([limits.h malloc.h stddef.h stdlib.h strings.h unistd.h])
# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
               
AC_CHECK_LIB(argtable2, arg_parse,,AC_MSG_ERROR(Scyther requires the argtable2 package (LGPL).
Get it from http://argtable.sourceforge.net/
or make sure that Scyther can find the libraries by setting
LD_LIBRARY_PATH correctly.))
AC_PROG_YACC
AM_PROG_LEX
                  
VERSION="0.0.1"
SUBDIRS=src 

dnl read Makefile.in and write Makefile
AC_OUTPUT(Makefile src/Makefile)
