AC_INIT(src/main.c)
AM_INIT_AUTOMAKE(Scyther, 0.2, ccremers@win.tue.nl)
AM_CONFIG_HEADER(config.h)
AC_CONFIG_SRCDIR(src)

AC_PROG_LIBTOOL

dnl find and test the C compiler
AC_PROG_CC
AC_LANG_C
        
# Make sure 'make' program is set.
AC_PROG_MAKE_SET

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([limits.h malloc.h stddef.h stdlib.h strings.h unistd.h])
AC_CHECK_HEADER([argtable2.h], [], AC_MSG_ERROR([Could not find argtable2.h required header file]))

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC

# Checks for YACC and (F)LEX
AC_PROG_YACC
AM_PROG_LEX
# Argtable 2 library
AC_CHECK_LIB(argtable2, arg_parse,,AC_MSG_ERROR(Could not find the argtable2 libraries (LGPL).
Download and install from http://argtable.sourceforge.net/
or make sure that the libraries can be found by setting
LD_LIBRARY_PATH correctly.))

AC_ARG_ENABLE(debug,
	      AC_HELP_STRING([--enable-debug], [enable debugging mode]),
	      AC_DEFINE(DEBUG,1," compile with debugging support"))
                  
VERSION="0.0.1"
SUBDIRS=src 

dnl read Makefile.in's and write Makefiles
AC_OUTPUT(Makefile src/Makefile)
